--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "redis": "^5.10.0",
+    "socket.io": "^4.8.1"
   }
 }
